--- a/WebForm/Pages/Shared/QuanLyChiTietTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietTour.cshtml
@@ -20,6 +20,41 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách chi tiết Tour</h4>
+                        @{
+                            try
+                            {
+                                <!---------------------Thông báo Xóa----------------------------------------------->
+                                if (HttpContext.Session.GetString("xoachitiettour") == "true")
+                                {
+                                    <h4 style="color: green">Xóa thành công</h4>
+                                    HttpContext.Session.Remove("xoachitiettour");
+                                }
+                                <!---------------------Thông báo Thêm----------------------------------------------->
+                                if (HttpContext.Session.GetString("themchitiettour") == "true")
+                                {
+                                    <h4 style="color: green">Thêm thành công</h4>
+                                    HttpContext.Session.Remove("themchitiettour");
+                                }
+                                else if (HttpContext.Session.GetString("themchitiettour") == "false")
+                                {
+                                    <h4 style="color: red">Trùng địa điểm</h4>
+                                    HttpContext.Session.Remove("themchitiettour");
+                                }
+                                <!---------------------Thông báo Sửa----------------------------------------------->
+                                if (HttpContext.Session.GetString("suachitiettour") == "true")
+                                {
+                                    <h4 style="color: green">Sửa thành công</h4>
+                                    HttpContext.Session.Remove("suachitiettour");
+                                }
+                                else if (HttpContext.Session.GetString("suachitiettour") == "false")
+                                {
+                                    <h4 style="color: red">Trùng địa điểm</h4>
+                                    HttpContext.Session.Remove("suachitiettour");
+                                }
+
+                            }
+                            catch (Exception e) { }
+                        }
                         <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyChiTietTour_Them">Thêm</a>
                         <div class="table-responsive">
                             <table class="table">
@@ -59,22 +94,22 @@
                 </div>
             </div>
             @{
-                string khachsan = "0";
-                string anuong = "0";
-                string phuongtien = "0";
+                string khachsan = "0 VNĐ";
+                string anuong = "0 VNĐ";
+                string phuongtien = "0 VNĐ";
                 string sodoan = "0";
-                string doanhso = "0";
-                string tong = "0";
+                string doanhso = "0 VNĐ";
+                string tong = "0 VNĐ";
                 try
                 {
                     if (HttpContext.Session.GetString("thongketimkiem") == "thanhcong")
                     {
-                        khachsan = HttpContext.Session.GetString("khachsan");
-                        anuong = HttpContext.Session.GetString("anuong");
-                        phuongtien =HttpContext.Session.GetString("phuongtien");
-                        sodoan =HttpContext.Session.GetString("sodoan");
-                        doanhso =HttpContext.Session.GetString("doanhso");
-                        tong = HttpContext.Session.GetString("tong");
+                        khachsan = long.Parse(HttpContext.Session.GetString("khachsan")).ToString("#,#")+ "VNĐ";
+                        anuong = long.Parse(HttpContext.Session.GetString("anuong")).ToString("#,#") + "VNĐ";
+                        phuongtien = long.Parse(HttpContext.Session.GetString("phuongtien")).ToString("#,#") + "VNĐ";
+                        sodoan = HttpContext.Session.GetString("sodoan");
+                        doanhso = long.Parse(HttpContext.Session.GetString("doanhso")).ToString("#,#") + "VNĐ";
+                        tong = long.Parse(HttpContext.Session.GetString("tong")).ToString("#,#") + "VNĐ";
 
                         HttpContext.Session.Remove("thongketimkiem");
                         HttpContext.Session.Remove("khachsan");
@@ -98,8 +133,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Thống kê Tour</h4>
                         <form class="forms-sample" method="post">
-                            <input type="date" asp-for="search1" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Thời gian bắt đầu">
-                            <input type="date" asp-for="search2" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Thời gian kết thúc">
+                            <input type="date" asp-for="search1" required class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Thời gian bắt đầu">
+                            <input type="date" asp-for="search2" required class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Thời gian kết thúc">
                             <input type="submit" asp-page-handler="tong" value="Tìm" class="btn btn-primary mr-2" />
                             <div class="form-group">
                                 <label for="exampleInputName1">Chi Phí Khách Sạn</label>
