--- a/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
@@ -70,7 +70,7 @@
                                 <option value="Id_DiaDiem">Mã Địa điểm</option>
                                 <option value="Ten_DiaDiem">Tên Địa điểm</option>
                             </select>
-                            <input type="text" asp-for="searchvalue" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Tìm kiếm">
+                            <input type="text" asp-for="searchvalue" required class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Tìm kiếm">
                             <input type="submit" asp-page-handler="search" class="btn btn-warning" value="Tìm" style="margin-left:">
                         </form>
                         <div class="table-responsive">
