--- a/WebForm/Pages/Shared/QuanLyDiaDiem_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem_Sua.cshtml
@@ -25,7 +25,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Địa Điểm</label>
-                                <input type="text" class="form-control" asp-for="diadiem.Ten_DiaDiem" value="@obj.Ten_DiaDiem" placeholder="Tên Địa Điểm">
+                                <input type="text" class="form-control" required asp-for="diadiem.Ten_DiaDiem" value="@obj.Ten_DiaDiem" placeholder="Tên Địa Điểm">
                             </div>
                             <input type="submit" value="Sửa" class="btn btn-primary mr-2" />
                         </form>
