--- a/WebForm/Pages/Shared/QuanLyDiaDiem_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem_Them.cshtml
@@ -22,7 +22,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Địa Điểm</label>
-                                <input type="text" class="form-control" asp-for="diadiem.Ten_DiaDiem" placeholder="Tên Địa Điểm">
+                                <input type="text" class="form-control" required asp-for="diadiem.Ten_DiaDiem" placeholder="Tên Địa Điểm">
                             </div>
                             <input type="submit" value="Thêm" asp-page-handler="AddDiaDiem" class="btn btn-primary mr-2"/>
                         </form>
