--- a/WebForm/Pages/Shared/QuanLyChiTietTour_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietTour_Them.cshtml
@@ -15,12 +15,12 @@
                         <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label>Địa Điểm</label>
-                                <select asp-for="tour.Id_DiaDiem" asp-items="@(new SelectList(Model.listdiadiem,"Id_DiaDiem", "Ten_DiaDiem"))">
+                                <select asp-for="tour.Id_DiaDiem" class="form-control" asp-items="@(new SelectList(Model.listdiadiem,"Id_DiaDiem", "Ten_DiaDiem"))">
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thứ tự</label>
-                                <input type="number" asp-for="tour.Thutu"  class="form-control" placeholder="Thứ tự">
+                                <input type="number" asp-for="tour.Thutu" required min="1" max="10"  class="form-control" placeholder="Thứ tự">
                             </div>
                             <input type="submit" asp-page-handler="add" value="Thêm" class="btn btn-primary mr-2">
                         </form>
