--- a/WebForm/Pages/Shared/QuanLyDoan_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan_Them.cshtml
@@ -18,11 +18,11 @@
                         <form class="forms-sample" method="post">
                             <div class="form-group" >
                                 <label for="exampleInputName1">Mã Đoàn</label>
-                                <input type="text" asp-for="doan.Id_Doan" value="@bus.MakeID()" class="form-control" placeholder="Mã Đoàn" readonly>
+                                <input type="text" asp-for="doan.Id_Doan" required value="@bus.MakeID()" class="form-control" placeholder="Mã Đoàn" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Đoàn</label>
-                                <input type="text" asp-for="doan.Ten_Doan" class="form-control" placeholder="Tên Đoàn">
+                                <input type="text" asp-for="doan.Ten_Doan" required class="form-control" placeholder="Tên Đoàn">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Tour</label>
@@ -32,15 +32,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Ngày khởi hành</label>
-                                <input type="date" asp-for="doan.Ngaykhoihanh" class="form-control" placeholder="Ngày khởi hành">
+                                <input type="date" asp-for="doan.Ngaykhoihanh" required class="form-control" placeholder="Ngày khởi hành">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Ngày kết thúc</label>
-                                <input type="date" asp-for="doan.Ngayketthuc" class="form-control" placeholder="Ngày kết thúc">
+                                <input type="date" asp-for="doan.Ngayketthuc" required class="form-control" placeholder="Ngày kết thúc">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Nội dung</label>
-                                <textarea type="text" class="form-control" asp-for="doan.Noidung" id="exampleTextarea1" rows="4" placeholder="Nội dung Đoàn"></textarea>
+                                <textarea type="text" class="form-control" required asp-for="doan.Noidung" id="exampleTextarea1" rows="4" placeholder="Nội dung Đoàn"></textarea>
                             </div>
                             <input type="submit" asp-page-handler="Add" value="Thêm" class="btn btn-primary mr-2" />
                         </form>
