--- a/WebForm/Pages/Shared/QuanLyGia_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia_Sua.cshtml
@@ -22,7 +22,7 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Thêm Giá</h4>
+                        <h4 class="card-title">Sửa Giá</h4>
                         <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Giá</label>
@@ -31,7 +31,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Tour</label>
-                                <select asp-for="loai" asp-items="@(new SelectList(Model.listtour,"Id_Tour", "Ten_Tour"))">
+                                <select asp-for="loai" class="form-control" asp-items="@(new SelectList(Model.listtour,"Id_Tour", "Ten_Tour"))">
                                 </select>
                             </div>
                             <div class="form-group">
