--- a/WebForm/Pages/Shared/QuanLyGia_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia_Them.cshtml
@@ -23,7 +23,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Tour</label>
-                                <select asp-for="gia.Id_Tour" asp-items="@(new SelectList(Model.listtour,"Id_Tour", "Ten_Tour"))">
+                                <select asp-for="gia.Id_Tour" class="form-control" asp-items="@(new SelectList(Model.listtour,"Id_Tour", "Ten_Tour"))">
                                 </select>
                             </div>
                             <div class="form-group">
