--- a/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
@@ -35,7 +35,10 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giới tính</label>
-                                <input type="text" class="form-control" asp-for="khachhang.Gioitinh_Khach" placeholder="Giới tính">
+                                <select class="form-control" asp-for="khachhang.Gioitinh_Khach">
+                                    <option value="Nam">Nam</option>
+                                    <option value="Nữ">Nữ</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Số điện thoại</label>
