--- a/WebForm/Pages/Shared/QuanLyNhanVien_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien_Sua.cshtml
@@ -26,23 +26,25 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Họ tên</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Hoten_NV" value="@obj.Hoten_NV"
+                                <input type="text" class="form-control" required asp-for="nhanvien.Hoten_NV" value="@obj.Hoten_NV"
                                        placeholder="Họ tên">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Email</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Email_NV" value="@obj.Email_NV"
+                                <input type="text" class="form-control" required asp-for="nhanvien.Email_NV" value="@obj.Email_NV"
                                        placeholder="Email">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Số điện thoại</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Sdt_NV" value="@obj.Sdt_NV"
+                                <input type="text" class="form-control" required asp-for="nhanvien.Sdt_NV" value="@obj.Sdt_NV"
                                        placeholder="Số điện thoại">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giới tính</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Gioitinh_NV" value="@obj.Gioitinh_NV"
-                                       placeholder="Giới tính">
+                                <select class="form-control" asp-for="gioitinh">
+                                    <option value="Nam">Nam</option>
+                                    <option value="Nữ">Nữ</option>
+                                </select>
                             </div>
                             <input type="submit" value="Sửa" class="btn btn-primary mr-2" />
                         </form>
