--- a/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
@@ -23,27 +23,25 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Họ tên</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Hoten_NV" placeholder="Họ tên">
+                                <input type="text" class="form-control" required asp-for="nhanvien.Hoten_NV" placeholder="Họ tên">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Email</label>
-                                <input type="email" class="form-control" asp-for="nhanvien.Email_NV" placeholder="Email">
+                                <input type="email" class="form-control" required asp-for="nhanvien.Email_NV" placeholder="Email">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Số điện thoại</label>
-                                <input type="number" class="form-control" asp-for="nhanvien.Sdt_NV" placeholder="Số điện thoại">
+                                <input type="text" class="form-control" required asp-for="nhanvien.Sdt_NV" placeholder="Số điện thoại">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giới tính</label>
                                 <select class="form-control" asp-for="nhanvien.Gioitinh_NV">
                                     <option value="Nam">Nam</option>
-                                    <option value="Nu">Nữ</option>
+                                    <option value="Nữ">Nữ</option>
                                 </select>
                             </div>
-                            <div class="form-group">
-                                <label for="exampleInputName1">Tình trạng</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Tinh_Trang" value="1" placeholder="1" readonly>
-                            </div>
+                               
+                                <input type="hidden" class="form-control" asp-for="nhanvien.Tinh_Trang" value="1">
                             <input type="submit" value="Thêm" asp-page-handler="AddNhanVien" class="btn btn-primary mr-2" />
                         </form>
                     </div>
