--- a/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
@@ -21,13 +21,13 @@
                         <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Đoàn</label>
-                                <select asp-for="iddoan" asp-items="@(new SelectList(Model.listdoan,"Id_Doan", "Id_Doan"))">
+                                <select asp-for="iddoan" class="form-control" asp-items="@(new SelectList(Model.listdoan,"Id_Doan", "Id_Doan"))">
                                 </select>
                                 <input type="hidden"  asp-for="phancong.Id_Doan" value="@obj.Id_Doan"/>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
-                                <select asp-for="idnv" asp-items="@(new SelectList(Model.listnv,"Id_NV", "Id_NV"))">
+                                <select asp-for="idnv" class="form-control" asp-items="@(new SelectList(Model.listnv,"Id_NV", "Id_NV"))">
                                 </select>
                                 <input type="hidden" asp-for="phancong.Id_NV" value="@obj.Id_NV" />
                             </div>
