--- a/WebForm/Pages/Shared/QuanLyTour_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyTour_Them.cshtml
@@ -22,15 +22,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Tour</label>
-                                <input type="text" asp-for="tour.Ten_Tour" class="form-control" placeholder="Tên Tour">
+                                <input type="text" asp-for="tour.Ten_Tour" required class="form-control" placeholder="Tên Tour">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Đặc điểm</label>
-                                <input type="text" asp-for="tour.Dacdiem_Tour" class="form-control" placeholder="Đặc điểm">
+                                <input type="text" asp-for="tour.Dacdiem_Tour"  required class="form-control" placeholder="Đặc điểm">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Loại</label>
-                                <select asp-for="tour.Id_Loai" asp-items="@(new SelectList(Model.listloai,"Id_Loai", "Ten_Loai"))">
+                                <select class="form-control" asp-for="tour.Id_Loai" asp-items="@(new SelectList(Model.listloai,"Id_Loai", "Ten_Loai"))">
                                 </select>
                             </div>
                             <input type="submit" asp-page-handler="Add" value="Thêm" class="btn btn-primary mr-2" />
